fixed alignment issues with div on header/header_img on website

--- a/website/index_style.css
+++ b/website/index_style.css
@@ -4,14 +4,14 @@
 	background-color: #2c3e50;
 }
 #header_img {
-	vertical-align: middle;
+	margin: 0 auto;
+	position: relative;
+	top: 18%;
 }
 #header_image_container {
 	height: 100%;
 	width: 80%;
 	margin: 0 auto;
-	position: relative;
-	top: 18%;
 }
 body {
 	margin: 0px;
